[package]
name = "squeeze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["sync", "time", "rt"] }

[dev-dependencies]
rand = { version = "0.8.5", features= [ "small_rng" ] }
statrs = "0.16.0"
tokio = { version = "1.28.1", features = ["rt", "macros", "test-util"] }
uuid = "1.3.2"
