[package]
name = "congestion-limiter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
conv = "0.3.3"
tokio = { version = "1.28.1", features = ["sync", "time", "rt"] }

[dev-dependencies]
doc-comment = "0.3.3"
itertools = "0.10.5"
rand = { version = "0.8.5", features = ["small_rng"] }
statrs = "0.16.0"
tokio = { version = "1.28.1", features = ["rt", "macros", "test-util"] }
tokio-test = "0.4.3"
uuid = "1.3.2"

[lints.clippy]
# Casts can cause subtle bugs
as_underscore = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
