[package]
name = "congestion-limiter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Thom Wright <dev@thomwright.co.uk>"]
description = """
Dynamic congestion-based concurrency limits for controlling backpressure
"""
documentation = "https://docs.rs/congestion-limiter"
homepage = "https://github.com/ThomWright/congestion-limiter"
repository = "https://github.com/ThomWright/congestion-limiter"
readme = "README.md"
keywords = ["concurrency", "congestion", "limiting", "limiter", "backpressure"]
categories = ["concurrency"]

[dependencies]
async-trait = "0.1.68"
conv = "0.3.3"
tokio = { version = "1.28.1", features = ["sync", "time", "rt"] }

[dev-dependencies]
doc-comment = "0.3.3"
itertools = "0.13.0"
rand = { version = "0.8.5", features = ["small_rng"] }
statrs = "0.17.1"
tokio = { version = "1.28.1", features = ["rt", "macros", "test-util"] }
tokio-test = "0.4.3"
uuid = "1.3.2"

[lints.clippy]
# Casts can cause subtle bugs
as_underscore = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
